# math_approx

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: run_tests.yml
cmake/: CPM.cmake
include/math_approx/: math_approx.hpp
include/math_approx/src/: asinh_approx.hpp  basic_math.hpp  hyperbolic_trig_approx.hpp  inverse_hyperbolic_trig_approx.hpp  inverse_trig_approx.hpp  log_approx.hpp  polylogarithm_approx.hpp  pow_approx.hpp  sigmoid_approx.hpp  sin_approx.hpp  sinh_cosh_approx.hpp  tanh_approx.hpp  trig_approx.hpp  wright_omega_approx.hpp
test/: CMakeLists.txt
test/src/: asinh_approx_test.cpp  cos_approx_test.cpp  hyperbolic_trig_approx_test.cpp  inverse_hyperbolic_trig_approx_test.cpp  inverse_trig_approx_test.cpp  log_approx_test.cpp  polylog_approx_test.cpp  pow_approx_test.cpp  sigmoid_approx_test.cpp  sin_approx_test.cpp  sinh_cosh_approx_test.cpp  tanh_approx_test.cpp  test_helpers.hpp  trig_approx_test.cpp  trig_turns_approx_test.cpp  wright_omega_approx_test.cpp
test/src/reference/: polylogarithm.hpp  sincospi.hpp  toms917.hpp
tools/: CMakeLists.txt
tools/bench/: CMakeLists.txt  asinh_bench.cpp  hyperbolic_trig_bench.cpp  inverse_hyperbolic_trig_bench.cpp  inverse_trig_bench.cpp  log_bench.cpp  polylog_bench.cpp  pow_bench.cpp  sigmoid_bench.cpp  sinh_cosh_bench.cpp  tanh_bench.cpp  trig_bench.cpp  trig_turns_bench.cpp  wright_omega_bench.cpp
tools/plotter/: CMakeLists.txt  plotter.cpp
